--- a/WanderList/WanderList/appsettings.json
+++ b/WanderList/WanderList/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "UserContext": "Server=(localdb)\\mssqllocaldb;Database=UserContext-cca89257-6815-4e1b-89fb-57a9426a63c1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
