--- a/WanderList/WanderList/appsettings.json
+++ b/WanderList/WanderList/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "UserContext": "Server=(localdb)\\mssqllocaldb;Database=UserContext-cca89257-6815-4e1b-89fb-57a9426a63c1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WanderListContext": "Server=(localdb)\\mssqllocaldb;Database=WanderListContext-9ce9762d-ee5e-40d1-8ad4-446424b3d7a7;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
