Basic dashboard finished

--- a/WanderList/WanderList/appsettings.json
+++ b/WanderList/WanderList/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "WanderListContext": "Server=(localdb)\\mssqllocaldb;Database=WanderListContext-9ce9762d-ee5e-40d1-8ad4-446424b3d7a7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WanderListContext": "Server=(localdb)\\v11.0;Database=WanderListContext-9ce9762d-ee5e-40d1-8ad4-446424b3d7a7;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
