--- a/WanderList/WanderList/WanderList.csproj
+++ b/WanderList/WanderList/WanderList.csproj
@@ -13,8 +13,16 @@
     <Compile Remove="Migrations\20180420204540_LocationMig.Designer.cs" />
     <Compile Remove="Migrations\20180421012952_LocationMig.cs" />
     <Compile Remove="Migrations\20180421012952_LocationMig.Designer.cs" />
+    <Compile Remove="Migrations\20180421014835_LocationMig.cs" />
+    <Compile Remove="Migrations\20180421014835_LocationMig.Designer.cs" />
     <Compile Remove="Migrations\20180422165900_InsertLocs.cs" />
     <Compile Remove="Migrations\20180422165900_InsertLocs.Designer.cs" />
+    <Compile Remove="Migrations\20180422173047_InsertLocs.cs" />
+    <Compile Remove="Migrations\20180422173047_InsertLocs.Designer.cs" />
+    <Compile Remove="Migrations\20180427080511_LocImageLink.cs" />
+    <Compile Remove="Migrations\20180427080511_LocImageLink.Designer.cs" />
+    <Compile Remove="Migrations\20180427083613_LocImageLink.cs" />
+    <Compile Remove="Migrations\20180427083613_LocImageLink.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
